more styling. Thank you brittany and claire

--- a/app/testgame-form.component.html
+++ b/app/testgame-form.component.html
@@ -3,7 +3,7 @@
 
   <!-- <a href="http://localhost:3001/auth/facebook">Login with facebook</a>
   <a href="http://localhost:3001/logout">Logout</a> -->
-    <h2 class="ui header">Find a Game</h2>
+    <h2 class="ui header">FIND A GAME</h2>
 <!-- ngForm is automatically attached to any form tags I have     -->
     <form #f="ngForm"
           (ngSubmit)="onSubmit(f.value)"
