--- a/app/games.component.html
+++ b/app/games.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div *ngIf="!pendingRequest && desperate">
-    <h2>Play this!</h2>
+    <h2>PLAY THIS!</h2>
     <ul class="games">
       <li>
         <span class="game-name">
@@ -39,7 +39,7 @@
   </div>
 
   <div *ngIf="!pendingRequest && matchingGames.length > 0">
-    <h2>Try one of these:</h2>
+    <h2>TRY ONE OF THESE:</h2>
     <ul class="games">
       <li *ngFor="#game of matchingGames">
         <span class="game-name">
