--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ h2 {
   color: #5d4124;
   font-size: 2.2em;
   margin: .9em auto .3em;
-  text-decoration: underline;
+  letter-spacing: 3px;
 }
 
 .button {
@@ -209,18 +209,22 @@ ul.games {
   border-radius: 4px;
   margin: auto;
   text-align: center;
+  margin-bottom: .3em;
+  letter-spacing: 3px;
 }
 
 /*large displays*/
 @media screen and (min-width: 40.5em) {
   .games .game-name {
     width: 45%;
+    margin-bottom: .8em;
   }
 }
 
 @media screen and (min-width: 28.75em) {
   .games .game-name {
     width: 85%;
+    margin-bottom: .8em;
   }
 }
 
@@ -248,6 +252,7 @@ ul.games {
 
 .songlink {
   padding: 3px;
+  font-size: 1.2em;
 }
 
 .no-games {
@@ -255,6 +260,7 @@ ul.games {
   margin-top: 1.5em;
   margin-bottom: 1.1em;
   color: #5d4124;
+  font-size: 1.4em;
 }
 
 .dance-party {
